--- a/src/app/core/layout/menu/menu.component.html
+++ b/src/app/core/layout/menu/menu.component.html
@@ -1,3 +1,11 @@
-<p>
-  menu works!
-</p>
+<div class="logo">
+  <img src="assets/images/it-works-logo.png" alt="it-works-logo" width="80px" />
+</div>
+<mat-nav-list class="menu">
+  <!-- <app-menu-item
+    *ngFor="let module of modules"
+    [modules]="modules"
+    (menuItemClick)="itemClick.emit()"
+  >
+  </app-menu-item> -->
+</mat-nav-list>
