--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,41 +1,54 @@
+@use "@angular/material" as mat;
+@use "app/core/scss/build-theme.scss" as theme;
 
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$it-works-challenge-primary: mat.define-palette(mat.$indigo-palette);
-$it-works-challenge-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$primary: #7ebb06;
+$secondary: #424242;
+$warn: #f00;
 
-// The warn palette is optional (defaults to red).
-$it-works-challenge-warn: mat.define-palette(mat.$red-palette);
+:root {
+  --primary: #7ebb06;
+  --secondary: #424242;
+}
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$it-works-challenge-theme: mat.define-light-theme((
-  color: (
-    primary: $it-works-challenge-primary,
-    accent: $it-works-challenge-accent,
-    warn: $it-works-challenge-warn,
-  ),
-  typography: mat.define-typography-config(),
-  density: 0
-));
+$primary-color: theme.build($primary);
+$secondary-color: theme.build($secondary);
+$warn-color: theme.build($warn);
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
+$it-works-challenge-primary: mat.define-palette($primary-color);
+$it-works-challenge-accent: mat.define-palette($secondary-color);
+$it-works-challenge-warn: mat.define-palette($warn-color);
+
+$it-works-challenge-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $it-works-challenge-primary,
+      accent: $it-works-challenge-accent,
+      warn: $it-works-challenge-warn,
+    ),
+    typography: mat.define-typography-config(),
+  )
+);
+
 @include mat.all-component-themes($it-works-challenge-theme);
 
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+h1 {
+  margin: 0;
+}
