--- a/src/app/core/layout/menu/menu.component.html
+++ b/src/app/core/layout/menu/menu.component.html
@@ -2,10 +2,10 @@
   <img src="assets/images/it-works-logo.png" alt="it-works-logo" width="80px" />
 </div>
 <mat-nav-list class="menu">
-  <!-- <app-menu-item
+  <app-menu-item
     *ngFor="let module of modules"
-    [modules]="modules"
+    [module]="module"
     (menuItemClick)="itemClick.emit()"
   >
-  </app-menu-item> -->
+  </app-menu-item>
 </mat-nav-list>
