--- a/src/app/core/layout/header/header.component.scss
+++ b/src/app/core/layout/header/header.component.scss
@@ -1,5 +1,11 @@
-.title-logo {
-  display: flex;
-  gap: 15px;
-  color: white;
+:host {
+  .title-logo {
+    display: flex;
+    gap: 15px;
+    color: white;
+  }
+
+  img {
+    cursor: pointer;
+  }
 }
