--- a/src/app/core/layout/menu/menu-item/menu-item.component.html
+++ b/src/app/core/layout/menu/menu-item/menu-item.component.html
@@ -1,1 +1,16 @@
-<p>menu-item works!</p>
+<mat-accordion>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        {{ module.Descricao }}
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <p
+      *ngFor="let subModule of module.subModulos"
+      routerLinkActive="active"
+      [routerLink]="'/submodule/' + replaceNameSpaces(subModule.Descricao)"
+    >
+      {{ subModule.Descricao }}
+    </p>
+  </mat-expansion-panel>
+</mat-accordion>
